fix(dijitComboBoxMenu): align spacing with other dijit popup menus

--- a/src/_flat.less
+++ b/src/_flat.less
@@ -373,6 +373,9 @@
       width: 18px;
     }
   }
+  .dijitComboBoxMenu .dijitMenuItem {
+    padding-block: 4px;
+  }
   .dijitToolbar {
     display: flex;
     flex-wrap: wrap;
